Add ignoredup flag and update() to shelchemy