@@ -21,11 +21,11 @@ ldict = "^3.220128.1"
 garoupa = "^2.220128.1"
 dill = "^0.3.4"
 pip = "^21.3.1"
-arff2pandas = {version = "1.0.1", optional = true}
 pandas = { version = "1.3.4", optional = true }
 SQLAlchemy = { version = "^1.4.27", optional = true }
 scikit-learn = {version = "1.0.1", optional = true}
 bson = "^0.5.10"
+liac-arff = "^2.5.0"
 
 [tool.poetry.dev-dependencies]
 autoreadme = "^0.2102.20"
@@ -40,7 +40,6 @@ pandas = "1.3.4"
 SQLAlchemy = "^1.4.26"
 pytest-cov = "^3.0.0"
 testfixtures = "^6.18.3"
-arff2pandas = "1.0.1"
 scikit-learn = "1.0.1"
 
 [build-system]
